tests/ui/pub/pub-ident-with-lifetime-incomplete.rs
fn main() {
}

pub   foo<'a>
//~^ ERROR missing `fn` or `struct` for function or struct definition

// ferrocene-annotations: fls_qcb1n9c0e5hz
// Functions
